[gd_scene load_steps=14 format=3 uid="uid://buootbivwwlpx"]

[ext_resource type="Texture2D" uid="uid://vyr0ks75oxum" path="res://graphics/characters/drone.png" id="1_gs6nb"]
[ext_resource type="Script" uid="uid://bbluheygs1jkv" path="res://scenes/entities/drone.gd" id="1_n87ok"]
[ext_resource type="Texture2D" uid="uid://bav7n447bnsa5" path="res://graphics/fire/explosion.png" id="3_xcp44"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_gs6nb"]
size = Vector2(285.5, 166)

[sub_resource type="CircleShape2D" id="CircleShape2D_n87ok"]
radius = 16.0

[sub_resource type="AtlasTexture" id="AtlasTexture_gs6nb"]
atlas = ExtResource("1_gs6nb")
region = Rect2(0, 0, 32, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_n87ok"]
atlas = ExtResource("1_gs6nb")
region = Rect2(32, 0, 32, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_xcp44"]
atlas = ExtResource("1_gs6nb")
region = Rect2(64, 0, 32, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_0tq5o"]
atlas = ExtResource("1_gs6nb")
region = Rect2(96, 0, 32, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_6vf5s"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_gs6nb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_n87ok")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xcp44")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0tq5o")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="Animation" id="Animation_0tq5o"]
resource_name = "explosion"
length = 0.8
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.39999998, 0.5, 0.6, 0.7),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("..")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.3),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"chain_reaction"
}]
}

[sub_resource type="Animation" id="Animation_6vf5s"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_in55t"]
_data = {
&"RESET": SubResource("Animation_6vf5s"),
&"explosion": SubResource("Animation_0tq5o")
}

[node name="Drone" type="CharacterBody2D" groups=["drones"]]
collision_layer = 4
collision_mask = 11
script = ExtResource("1_n87ok")

[node name="DetectionArea" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="DetectionCollision" type="CollisionShape2D" parent="DetectionArea"]
position = Vector2(0, 1)
shape = SubResource("RectangleShape2D_gs6nb")

[node name="ExplosionArea" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="ExplosionCollision" type="CollisionShape2D" parent="ExplosionArea"]
shape = SubResource("CircleShape2D_n87ok")

[node name="DamageArea" type="CollisionPolygon2D" parent="."]
polygon = PackedVector2Array(-9, -6, -3, -6, -3, -5, -2, -5, -2, -3, 2, -3, 2, -2, 3, -2, 3, -5, 4, -5, 4, -6, 10, -6, 10, -5, 11, -5, 11, -1, 10, -1, 10, 0, 5, 0, 5, 5, 4, 5, 4, 6, 3, 6, 3, 7, 2, 7, 2, 8, -3, 8, -3, 7, -4, 7, -4, 6, -5, 6, -5, 5, -6, 5, -6, 0, -9, 0, -9, -1, -10, -1, -10, -5, -9, -5)

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_6vf5s")
autoplay = "default"
frame_progress = 0.46962395

[node name="Explosion" type="Sprite2D" parent="."]
visible = false
texture = ExtResource("3_xcp44")
hframes = 8

[node name="ExplosionAnimation" type="AnimationPlayer" parent="Explosion"]
libraries = {
&"": SubResource("AnimationLibrary_in55t")
}

[connection signal="body_entered" from="DetectionArea" to="." method="_on_detection_area_body_entered"]
[connection signal="body_exited" from="DetectionArea" to="." method="_on_detection_area_body_exited"]
[connection signal="body_entered" from="ExplosionArea" to="." method="_on_explosion_area_body_entered"]
